# Chunking-Research

./: .dockerignore  .env.example  .gitignore  .gitmodules  DOCKER.md  Dockerfile  EXPERIMENTS PLANS.md  README.md  download_datasets.sh  download_models.sh  init.sh  pipeline.py  repo setup instruction.md  requirements-literaryqa.txt  requirements.frozen.txt  requirements.txt  run_annotate_and_convert.py  run_batch.sh  run_chunking.py  run_conversion_to_pirb.sh  run_experiment.py  run_retrieval_eval.py  run_with_vllm.sh  versions_venv.txt  versions_venv_literaryqa.txt
analysis/: analysis_chunks.ipynb  analysis_results.ipynb
chunker_analyzer/: README.md  a.ipynb  analyze_merged_vs_nonmerged.ipynb  analyze_merged_vs_nonmerged.py  b.ipynb  chunker_analysis.py  chunker_analysis_notebook.ipynb  chunker_len.py  compute_random_baseline.py  docker-compose.yml  start.sh
chunker_analyzer/similarity_backend/: Dockerfile  app.py  pyproject.toml
examples/: 01_load_dataset_unified.ipynb  02_chunk_unified.ipynb  03_eval_chunks.ipynb
scripts/: GUTEN_FULL.txt  POQUAD_full.txt  SCIFACTS_FULL.txt  SQUAD_FULL.txt  build_pirb_export_baseline_cache.py  compare_pirb_export_baseline.py  cross_dataset_bge_experiments.txt  download_all_datasets.txt  export_pirb_session_with_timeout.sh  report_document_lengths.py  report_missing_relevant_minus_one.py  run_experiments.py  squad_all_runs_and_eval.txt  squad_fixed_50_all.txt  squad_fixed_eval.txt  squad_fixed_eval_late.txt  squad_fixed_runs.txt  squad_fixed_sweep_all.txt  squad_mini_smoketest.py  squad_passage_regexp_eval.txt  (+9 more)
src/: schemas.py  (+4 more)
(+398 files in other folders)
