[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "sentence_transformers==5.1.2",
  "FlagEmbedding==1.3.2",
  "ipykernel",
  "matplotlib"
]

[project.optional-dependencies]
need_torch = [
  "torch==2.7.1"
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true